        fixed api\n
        version 29 patient, doctor 3\n
        added appointment card with detail info\n
        version 30 patient\n
        added appointment card with patient info for doctor\n
        version 31 patient, doctor 4\n
        added appointments for specific date screen\n
        added create appointment success screen\n
        appoinments list is currently pretty slow, bc it load each doctor for each appointment, future cache will fix that\n
        version 32 patient\n
        added doctor caching (don't have cache update functionality yet)\n
        version 33 patient\n
        appointments split by status\n
        fixed insurances\n
        version 34 patient\n
        version 35 patient\n
        appointments split by status with colors\n
        doctor filters without location rn\n
        fixed some ui bugs\n
        multiselect screen with search\n
        version 36 patient\n
        profile avatar fixed\n
        collapsible appointments\n
        doctor search\n
        version 37 patient\n
        ci/cd innerworkings
        progress bar for app
        home screen now clickable
        moved hardcoded strings
        profile avatar in bottom navigation
        version 39 patient\n
        fixed doctors filter
        added progress bar for all network requests
        version 40 patient\n
        added pagination to filters
        doctors can now be added to favorites
        single mode filter has been fixed
        version 41 patient\n
        phone verification
        notification settings
        version 42 patient\n
        notification switches - fixed appearance
        version 43 patient\n
        fixed screen rotation
        fixed filters
        version 44 patient\n
        added doctors map with clustering
        currently it has some navigation problems
        you can toggle between list and map
        version 45 patient\n
        doctors favorite on map
        geolocation
        version 46 patient\n

